# journaling_bot

./: .gitignore  main.py  pyproject.toml  readme.md
