[tool.poetry]
name = "journaling-bot"
version = "0.1.0"
description = ""
authors = ["johnchurch <churchjohnr@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
sounddevice = "^0.4.6"
openai = "^1.3.3"
requests = "^2.31.0"
numpy = "^1.26.2"
keyboard = "^0.13.5"
python-dotenv = "^1.0.0"
soundfile = "^0.12.1"
whispercpp = {git = "https://github.com/stlukey/whispercpp.py"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
